--- a/demo.ipynb
+++ b/demo.ipynb
@@ -5,7 +5,7 @@
    "id": "c97f1fc2-1478-4f4e-91ac-4122b0e9261a",
    "metadata": {},
    "source": [
-    "# A demonstation of synthetic handwritten image generation using variation autoencoders"
+    "# A demonstation of synthetic handwritten image generation using variational autoencoders"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "id": "81aeb6b3-ffe0-4fbb-99f0-8d1748780c72",
    "metadata": {},
    "source": [
-    "# Using VAE"
+    "# Using the vanilla VAE"
    ]
   },
   {
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
